# the-moat

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  KNOWN-GAPS.md  LICENSE  QUICKSTART.md  README.md  moat.example.yaml  pyproject.toml
docs/: DECISIONS.md  SECURITY-RESEARCH.md  openclaw.md
openclaw-plugin/: README.md  index.js  index.test.js  package.json
rules/: patterns.json
src/the_moat/: __init__.py  classifier.py  cli.py  config.py  engine.py  logger.py  proxy.py  server.py
src/the_moat/rules/: patterns.json
tests/: test_api.py  test_classifier.py  test_config.py  test_engine.py  test_logger.py  test_proxy.py
