[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "the-moat"
version = "0.1.0"
description = "The firewall for AI agents. Scans inbound content, blocks prompt injection, logs everything."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ohana Industries", email = "hello@ohanaindustries.com" },
]
keywords = ["ai", "security", "prompt-injection", "llm", "agent", "firewall"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pyyaml>=6.0",
    "mitmproxy>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
moat = "the_moat.cli:main"

[project.urls]
Homepage = "https://github.com/joshuaohana/the-moat"
Documentation = "https://github.com/joshuaohana/the-moat#readme"
Repository = "https://github.com/joshuaohana/the-moat"
Issues = "https://github.com/joshuaohana/the-moat/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
